--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -369,7 +369,7 @@ nav {
   flex-wrap: wrap; }
   .roster-list .player-info {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     flex: 0 0 100%;
     transition: all 300ms ease-in;
     border: 0.1px solid #d1d7db;
@@ -389,7 +389,8 @@ nav {
         padding: 1rem .5rem 1rem 0; }
     .roster-list .player-info .accordion-content-container {
       display: flex;
-      flex-wrap: wrap; }
+      flex-wrap: wrap;
+      flex: 1 0 100%; }
     .roster-list .player-info .season-stats {
       flex: 1 0 calc(100% - 10px);
       margin: 5px;
